@@ -4,7 +4,7 @@
 
 -utility to split XML file in subfiles with a limited number of questions.
 
--website (relative layout, google analytics, sitemaps)
+-website (relative layout, google analytics, sitemaps, add to CVS?, php?)
 
 -improve graphics
 
